--- a/views/swift.html
+++ b/views/swift.html
@@ -17,7 +17,7 @@
 			<p>
 		</div>
 		<div class="content">
-			<p>Swift Projects is built on Amazon S3 and Google services with a modern software stack that glues it all together, ensuring that your data is secure, your team is mobile, and your company is plugged into live updates and priorities. To prove how confident we are that Swift Projects will change your close out game, we are offering a complimentary design service paired with a 1 month free trial that we'd like to offer to help you with your toughest project.
+			<p>Swift Projects is built on Amazon S3 and Google services with a modern software stack that glues it all together, ensuring that your data is secure, your team is mobile, and your company is plugged into live updates and priorities. To prove how confident we are that Swift Projects will change your close out game, we are offering a complimentary template design service paired with a 1 month free trial that we'd like to offer to help you with your toughest project.
 			<p>
 		</div>
       <a class="get-started" href="https://swiftprojects.io">
