--- a/views/swift.html
+++ b/views/swift.html
@@ -11,13 +11,13 @@
   </div>
   <div class="product-container desktop-display">
     <div class="section intro">
-      <div class="heading">Can you afford another rejection or delay?</div>
+      <div class="heading">Want more sales? Close out faster</div>
 		<div class="content">
-			<p>Swift Projects puts the power to close wireless construction projects on the day of construction completion into the palm of your hand. Our system is all about capturing the details and emphasizing mobility and automation. Simply put, with Swift Projects, your company can move away from manual close out processes and into a near real time, semi-automated, mobile-first environment that helps you complete projects with accuracy and speed.
+			<p>The C.O.P. - a bane to many good men and women, and cause for much unecessary heartache. Truly, a villain in a beautiful story about you getting paid. Joking aside, we made something for this real nightmare. It's called Swift Projects, and it puts the power to close telecommunication construction projects out cleanly on the day of construction completion into the palm of your hand. Our system is all about capturing the details while keeping things simple, ingraining quality assurance, and emphasizing mobility and automation. 
 			<p>
 		</div>
 		<div class="content">
-			<p>Swift Projects is built on Amazon S3 and Google services with a modern software stack that glues it all together, ensuring that your data is secure, your team is mobile, and your company is plugged into live updates and priorities. To prove how confident we are that Swift Projects will change your close out game, we are offering a complimentary template design service paired with a 1 month free trial that we'd like to offer to help you with your toughest project.
+			<p>Swift Projects is built on Amazon S3 and Google services with a modern software stack that glues it all together. What this means for you and your IT teams is that your data is safe, encrypted, and backed by the leading server, database, client, and authentication services.
 			<p>
 		</div>
       <a class="get-started" href="https://swiftprojects.io">
@@ -28,30 +28,30 @@
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">Close Out Projects Live</div>
+      <div class="heading">The basics</div>
       <div class="content feature-flex">
         <div>
-          <div class="title">Access Anywhere</div>
-          <div class="body">Accessible on iOS, Android, and desktop, allowing team members to contribute from the field or office easily</div>
+          <div class="title">Photos and Videos from the Field</div>
+          <div class="body">At its most basic level, Swift Projects is the best way to get photos and videos from the field into a highly detailed, scope specific requirement list</div>
         </div>
         <div>
-          <div class="title">Real-Time Updates</div>
-          <div class="body">Live updates on statuses, stats, and scheduling allow the team to move faster and react instantly</div>
+          <div class="title">Smart Lists</div>
+          <div class="body">Almost everything in the app is a list or a form, just really smart versions that make peoples lives easier and more automated, that anyone can build</div>
         </div>
       </div>
     </div>
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">More Profit, Less Pain</div>
+      <div class="heading">Peace and Profit</div>
       <div class="content feature-flex">
         <div>
-          <div class="title">Live Approvals</div>
-          <div class="body">QA completed work live and reject or approve as necessary to prevent return visits and close instantly</div>
+          <div class="title">You will close out faster</div>
+          <div class="body">QA completed work live and remove the biggest bottleneck to closing out in real time, getting a complete, and organized set of photos as they're taken</div>
         </div>
         <div>
-          <div class="title">Automatic Tracking</div>
-          <div class="body">Smart tasks that liberate teams from tracking statuses so people get the information they need without asking</div>
+          <div class="title">Things can be much easier</div>
+          <div class="body">Templates are game changers as-is, but we take them a step further with custom GUI interfaces, and Excel friendliness for creating SOW specific file lists</div>
         </div>
       </div>
     </div>
@@ -61,17 +61,17 @@
       <div class="heading">Evolve at the speed of innovation</div>
       <div class="content feature-flex">
         <div>
-          <div class="title">Templates</div>
-          <div class="body">Design workflow templates to automate the management of any project with as little as your phone and a moment of time</div>
+          <div class="title">The power of simplicity</div>
+          <div class="body">Swift Projects is the app designed to get you closed out fast, so if you can make a list, we can turn you into an automation engineer</div>
         </div>
         <div>
-          <div class="title">Simplicity</div>
-          <div class="body">If you can create a list, we can turn you into a workflow automation engineer</div>
+          <div class="title">3 Basic building blocks</div>
+          <div class="body">Our system is simple: we use milestones, tasks, and requirements as the building blocks of any project</div>
         </div>
       </div>
     </div>
   </div>
-  <div class="product-container">
+  <!--<div class="product-container">
     <div class="section">
       <div class="heading">Connect and put collaboration on hyper speed</div>
       <div class="content feature-flex">
@@ -85,7 +85,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
   <div class="mobile-displays">
     <div>
       <img src="img/swift/1.PNG">
@@ -99,12 +99,12 @@
       <div class="heading">Deeper conversations with less digging</div>
       <div class="content feature-flex">
         <div>
-          <div class="title">Annotate</div>
-          <div class="body">With our on-topic messaging, you know exactly where conversations are when you need them</div>
+          <div class="title">Chat</div>
+          <div class="body">With our on-topic messaging, you know exactly where conversations are when you need them - it takes commenting and chat to a level beyond simple channels</div>
         </div>
         <div>
           <div class="title">Callouts</div>
-          <div class="body">Include teammates into the discussion by using “@” in front of their names to direct your messages and get answers fast</div>
+          <div class="body">Teams and people can be called-out from wherever messages can be left, which then collect into your master chat list and act as a breadcrumb trail of recent events</div>
         </div>
       </div>
     </div>
