--- a/views/closeout.html
+++ b/views/closeout.html
@@ -9,19 +9,16 @@
       <div class="heading">Give us your raw site files and we close you out</div>
       <div class="content">
         <p>
-         No other company focuses as much on the close out process, our attention to detail, and specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. It pays off in our clients gaining market share and improving cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and provide you access to skilled telecommunication technicians and managers that you can scale up and down with demand, as needed, without recruiting and ongoing commitment. 
-        </p>
-        <p>
-          Trying our close out management services comes with a simple proposition, that we will bring data, clarity, structure, and technology that can make you more profitable, and that you can try without commitment.
+         No other company focuses as much on the close out process, it's our ambition to innovate, attention to detail, and specialization that our clients rely on to keep on top of the expanding demands and shortened timelines their customers expect. This simple item, the close out package, has the power to make or break your success, convert bid awarders into your corner, and get you paid. So we built a service that does this better than its ever been done before.
         </p>
       </div>
     </div>
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">Cheaper, Faster, Better, at the same time</div>
+      <div class="heading">Cheaper, Faster, Better - at the same time</div>
       <div class="content">
-        <span>Technology enables us to do what wasn't possible before, and with the convergence of LTE/high-speed networks, and better than ever hardware at accessible prices, we are witnessing the end of the old adage that you can't have "cheaper, faster, and better" all at once. We are proof of this. Our in-house developed software like Swift Projects, along with other tools and custom scripts cab automate things like Anritsu Sweep processing and validation, ATT's RET forms, or Verizon Wireless' RF Summary in the BAWA/DC market, providing accuracy and speed gains an order of magnitude better than manual processes. Our people, matched with this technological capability enables us to provide our clients with an unbeatable value.</span>
+        <span>Technology is our edge. Our in-house developed software like Swift Projects, along with other tools like custom written scripts and programs can automate things like Anritsu Sweep processing and validation, ATT's RET forms, or Verizon Wireless' RF Summary, providing accuracy and speed gains an order of magnitude better than manual processes. Our people, matched with this technological capability enables us to provide our clients with an unbeatable value.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
@@ -43,7 +40,7 @@
             <div class="body">
               <ul>
                 <li>Ontel has less than a 3% rejection rate for 2014-2016 on over 1500+ site-projects</li>
-                <li>We've been growing for 3 years on the strength of our cost reduction (over 50% in some cases), and quality</li>
+                <li>We've grown for the last 3 years on the strength of our performance, quality, and cost reduction (over 50% in some cases)</li>
               </ul>
             </div>
           </div>
