--- a/views/swift.html
+++ b/views/swift.html
@@ -51,7 +51,7 @@
         </div>
         <div>
           <div class="title">Things can be much easier</div>
-          <div class="body">Templates are game changers as-is, but we take them a step further with custom GUI interfaces, and Excel friendliness for creating SOW specific file lists</div>
+          <div class="body">Templates are game changers as-is, but we take them a step further with custom GUI interfaces, and Excel friendliness for creating SOW specific file lists at scale</div>
         </div>
       </div>
     </div>
