--- a/views/support.html
+++ b/views/support.html
@@ -12,7 +12,7 @@
           <div class="" ui-sref="swift-privacy">Privacy Policy</div>
         </div>
         <div>
-          <div class="title">User Management</div>
+         <!--<div class="title">User Management</div>
           <div class="body">
             <div>Q: We want to add new users, how do we do this?</div>
             <div>A: Because we’re in beta, we would ask that if you want to add users you contact us. In the near future we will make it possible to do from within the app.</div>
@@ -30,10 +30,13 @@
           <div class="body">
             <div>Q: What future features are you introducing to Swift Projects?</div>
             <div>A: Time tracking, forms, data tags, GPS based services, and a public API</div>
+			
           </div>
         </div>
+		-->
       </div>
     </div>
   </div>
 </div>
+	
 <site-footer></site-footer>
