--- a/views/swift.html
+++ b/views/swift.html
@@ -94,20 +94,22 @@
       <img src="img/swift/4.PNG">
     </div>
   </div>
+  <!--
   <div class="product-container">
     <div class="section">
       <div class="heading">Deeper conversations with less digging</div>
       <div class="content feature-flex">
         <div>
-          <div class="title">Chat</div>
-          <div class="body">With our on-topic messaging, you know exactly where conversations are when you need them - it takes commenting and chat to a level beyond simple channels</div>
+          <div class="title">Messaging</div>
+          <div class="body">Everything has its own chat, then it's all summarized in one place</div>
         </div>
         <div>
           <div class="title">Callouts</div>
-          <div class="body">Teams and people can be called-out from wherever messages can be left, which then collect into your master chat list and act as a breadcrumb trail of recent events</div>
+          <div class="body">Teams and people can be called out, with l</div>
         </div>
       </div>
     </div>
+	-->
   </div>
   <div class="product-container">
     <div class="section">
