--- a/views/swift.html
+++ b/views/swift.html
@@ -47,7 +47,7 @@
       <div class="content feature-flex">
         <div>
           <div class="title">You will close out faster</div>
-          <div class="body">QA completed work live and remove the biggest bottleneck to closing out in real time, getting a complete, and organized set of photos as they're taken</div>
+          <div class="body">QC completed work live and remove the biggest bottleneck to closing out in real time, getting a complete, and organized set of photos as they're taken</div>
         </div>
         <div>
           <div class="title">Things can be much easier</div>
