--- a/views/pricing.html
+++ b/views/pricing.html
@@ -47,9 +47,9 @@
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">Quoted Prices</div>
+      <div class="heading">Site Development</div>
       <div class="content">
-        We quote all site development and implementation services as detailed on our MGMT solutions page.
+       All site development and implementation management services are quoted or bid upon request
       </div>
     </div>
   </div>
