--- a/views/pricing.html
+++ b/views/pricing.html
@@ -47,9 +47,9 @@
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">Site Development</div>
+      <div class="heading">Quoted Prices</div>
       <div class="content">
-       All site development and implementation management services are quoted or bid upon request
+       All site development and implementation management services as referenced on or MGMT page are quoted or bid upon request. We are happy to provide a clear and value driven response to requests for quotation.  
       </div>
     </div>
   </div>
