--- a/views/closeout.html
+++ b/views/closeout.html
@@ -18,7 +18,7 @@
     <div class="section">
       <div class="heading">Cheaper, Faster, Better - at the same time</div>
       <div class="content">
-        <span>Technology is our edge. Our in-house developed software like Swift Projects, along with other tools like custom written scripts and programs can automate things like Anritsu Sweep processing and validation, ATT's RET forms, or Verizon Wireless' RF Summary, providing accuracy and speed gains an order of magnitude better than manual processes. Our people, matched with this technological capability enables us to provide our clients with an unbeatable value.</span>
+        <span>Technology is our edge. Our in-house developed software like Swift Projects, and custom apps automate things like Anritsu Sweep processing and validation, ATT's RET forms, Verizon Wireless' RF Summariesetc. This introduces accuracy and speed gains an order of magnitude better than current manual processes. Our people, matched with this technological capability, enables us to provide our clients with a critical business solution at a reasonable rate.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
