--- a/views/closeout.html
+++ b/views/closeout.html
@@ -6,10 +6,10 @@
   </div>
   <div class="product-container">
     <div class="section intro">
-      <div class="heading">Give us your raw site files and we close you out</div>
+      <div class="heading">Give us your raw site files and we'll close you out</div>
       <div class="content">
         <p>
-         No other company focuses as much on the close out process - it's our ambition to innovate, attention to detail, and specialization that our clients rely on to keep on top of the expanding demands and shortened timelines their customers expect. This simple item, the close out package, has the power to make or break your success, convert bid awarders into your corner, and get you paid. So we built a service that does this better than its ever been done before.
+         No other company focuses as much on the close out process - it's our specialization in this area that our clients rely on to keep on top of the expanding demands and shortened timelines their customers expect. This simple item, the close out package, has the power to make or break your success, convert bid awarders into your corner, and get you paid. So we built a service that does this better than its ever been done before.
         </p>
       </div>
     </div>
