--- a/css/_pages.scss
+++ b/css/_pages.scss
@@ -64,3 +64,31 @@
     margin-top: 40px;
   }
 }
+
+.standard-btn {
+  padding: 12px 14px;
+  text-transform: uppercase;
+  margin: 0 8px;
+  width: 280px;
+  color: #fff;
+  text-align: center;
+  font-size: 1.2em;
+  letter-spacing: 0.08em;
+  border-radius: 4px;
+  font-weight: 300;
+  cursor: pointer;
+  margin-bottom: 0.3em;
+  background: #258199;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.support-flex {
+  max-width: 800px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row !important;
+  justify-content: space-around !important;
+  flex-wrap: wrap;
+}
