--- a/views/swift.html
+++ b/views/swift.html
@@ -13,7 +13,7 @@
     <div class="section intro">
       <div class="heading">Want more sales? Close out faster</div>
 		<div class="content">
-			<p>The C.O.P. - a bane to many good companies, and a cause for much heartache. Truly, a villain in a beautiful story about you getting paid. Joking aside, we made something for this real nightmare. It's called Swift Projects, and it puts the power to close telecommunication construction projects out cleanly on the day of construction completion into the palm of your hand. Our system is all about capturing the details while keeping things simple, ingraining quality assurance, and emphasizing mobility and automation. 
+			<p>The close out package - a bane to many good companies, destroyer of evenings away from work, and a cause for much heartache. Truly, a villain in a beautiful story about you getting paid. OK, joking aside, we made something for this real nightmare. It's called Swift Projects, and it puts the power to close telecommunication construction projects out cleanly, and on the day of construction completion, into the palm of your hand. Our system is all about capturing the details while keeping things simple, ingraining quality assurance, and emphasizing mobility and automation. 
 			<p>
 		</div>
 		<div class="content">
