Revert "Link to Join in Get Started"
This reverts commit 117a7a703a4e2d6877f57791ce616e68f6c324f0.

--- a/views/swift.html
+++ b/views/swift.html
@@ -20,7 +20,7 @@
 			<p>Swift Projects is built on Amazon S3 and Google services with a modern software stack that glues it all together. What this means for you and your IT teams is that your data is safe, encrypted, and backed by the leading server, database, client, and authentication services.
 			<p>
 		</div>
-      <a class="get-started" href="https://swiftprojects.io/#/setup/join">
+      <a class="get-started" href="https://swiftprojects.io">
         <span>Get Started</span>
       </a>
     </div>
