--- a/views/pricing.html
+++ b/views/pricing.html
@@ -33,9 +33,8 @@
           <div>
             <div class="body">
               <ul>
-                <li><span class="price-emphasis">$225</span> per C.O.P. without your use of Swift Projects, for all carriers</li>
-				<li><span class="price-emphasis">$199</span> per C.O.P. with your use of Swift Projects, for all carriers</li> 
-                <li><span class="price-emphasis">$75</span> per L.L. package. Landlord packages are in addition to the C.O.P. for the carrier (Crown, SBA, ATC, etc.)</li>
+                <li><span class="price-emphasis">$300</span> per C.O.P. without your use of Swift Projects, for all carriers</li>
+                <li><span class="price-emphasis">$75</span> per L.L. package, Regulatory form, and other add-ons.</li>
                 <li><span class="price-emphasis">$40</span> per revision round. This fee is applied for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for close out</li>
 				<li><span class="price-emphasis">Free</span> for your first C.O.P.</li>
               </ul>
