--- a/views/swift.html
+++ b/views/swift.html
@@ -160,6 +160,10 @@
   </div>
   <div class="pricing-section">
     <div class="cta">Forget what excuses sound like</div>
+    <div class="downloads">
+      <a href='https://play.google.com/store/apps/details?id=io.swiftworks.projects&hl=en&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' class="google"/></a>
+      <a href='https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1088762177&mt=8'><img alt='Download in the App Store' src='img/appstore.svg' class="apple"/></a>
+    </div>
     <div class="pricing-btn" ui-sref="pricing">
       <span>Pricing</span>
       <div class="icon ion-android-arrow-dropright"></div>
