--- a/css/ontel.css
+++ b/css/ontel.css
@@ -116,6 +116,9 @@ ng-md-icon > svg { -webkit-transition: width 750ms ease-in-out, height 750ms eas
   .contact-info span { display: none; }
   .get-started { padding: 12px 14px; text-transform: uppercase; margin: 0 auto; width: 180px; text-align: center; font-size: 1.2em; letter-spacing: 0.08em; border-radius: 4px; font-weight: 300; cursor: pointer; margin-top: 50px; background: #444a50; color: #fff; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
   .get-started:hover { background: rgba(68, 74, 80, 0.85); }
+  .downloads { text-align: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-bottom: 1em; }
+  .downloads .google { width: 228px; }
+  .downloads .apple { width: 200px; }
   .standard-header { background: #2B2B2B; height: 100px; font-size: 3em; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; color: #fff; text-align: center; letter-spacing: 0.04em; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; padding: 60px 0px 15px 0px; }
   .standard-container { max-width: 960px; width: 90%; margin: 0 auto; height: 100%; }
   .standard-container input { font-family: "brandon-grotesque", sans-serif; width: calc(100% - 20px); margin: 30px 0px; padding: 12px; color: #444; border: none; -webkit-appearance: none; border-radius: 2px; -webkit-tap-highlight-color: transparent; font-size: 1.1em; font-weight: 300; letter-spacing: 0.04em; outline: none; border: 1px solid #ddd; }
