--- a/views/pricing.html
+++ b/views/pricing.html
@@ -12,12 +12,12 @@
             <div class="body">
               <ul>
                 
-                <li><span class="price-emphasis">$99</span> per month for up to 10 managed users and unlimited guests - includes 1TB of data</li>
+                <li><span class="price-emphasis">$25</span> per active site-project per month. Includes 1TB of data and unlimited users</li>
 				<li><span class="price-emphasis">Free</span> organization setup and orientation for small businesses of 10 users or less</li>
 				<li><span class="price-emphasis">Free</span> project template design by an experienced telecommunications manager for your first project</li>
 				<li><span class="price-emphasis">Free</span> 1-month trial of Swift Projects</li>
 				<li><span class="price-emphasis">Free</span> e-mail, phone, and chat support</li>
-				<li><span class="price-emphasis">Contact Us</span> for quotes on additional users and data</li>
+				<li><span class="price-emphasis">Contact Us</span> for quotes on special setups and pricing</li>
               </ul>
             </div>
           </div>
@@ -33,9 +33,9 @@
           <div>
             <div class="body">
               <ul>
-                <li><span class="price-emphasis">$300</span> per C.O.P. without your use of Swift Projects, for all carriers</li>
+                <li><span class="price-emphasis">$225-300</span> per carrier C.O.P. We will take volume, scope, and commitment in mind to provide the best price for your specific need</li>
                 <li><span class="price-emphasis">$75</span> per L.L. package, Regulatory form, and other add-ons.</li>
-                <li><span class="price-emphasis">$40</span> per revision round. This fee is applied for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for close out</li>
+                <li><span class="price-emphasis">$40</span> per revision round. This fee is applied for each round of revision based on undocumented requirements from the customer, punch-item corrections, or missing files.</li>
 				<li><span class="price-emphasis">Free</span> for your first C.O.P.</li>
               </ul>
             </div>
