--- a/views/main.html
+++ b/views/main.html
@@ -30,7 +30,7 @@
         <div class="section-content">
             <div class="heading">
                 <div class="head">We are Close Out Specialists</div>
-                <div class="sub">close out management that gets you paid faster, Starting at $199 per site-project.</div>
+                <div class="sub">close out management that closes you out live, and for less money.</div>
             </div>
             <div class="body">Close out packages are usually a drag for everyone involved, but they no longer have to be. Since our founding, we've been entrusted with over 1500+ site-project close outs, all done cheaper, faster, and better than traditional teams. Our clients trust us because we've proven over time that we can deliver exceptional value. Find out how easy it can be to close out, get paid, and keep more for your profits. You can even try our close out management services for free.</div>
         </div>
@@ -42,7 +42,7 @@
         <div class="section-content">
             <div class="heading">
                 <div class="head">close out Software</div>
-                <div class="sub">The most powerful close out software in the world, starting at $99 per month.</div>
+                <div class="sub">The most powerful close out software in the world, for $25 per site-project.</div>
             </div>
             <div class="body">Swift Projects™ combines aspects of products like SharePoint and Dropbox, with added innovation found no where else, to make a mobile friendly, robust, software platform built specifically for running wireless projects. Take the first steps toward automating your excuses away. <span class="swift-cta">Find out more about how Swift Projects makes closing out and running your projects better.</span></div>
         </div>
