--- a/views/pricing.html
+++ b/views/pricing.html
@@ -12,7 +12,7 @@
             <div class="body">
               <ul>
                 
-                <li><span class="price-emphasis">$25</span> per active site-project per month. Includes 1TB of data and unlimited users.</li>
+                <li><span class="price-emphasis">$25</span> per active site-project per month. Includes 1TB of data and unlimited users. Volume discounts are available.</li>
 				<li><span class="price-emphasis">Free</span> organization setup and orientation for small businesses of 10 users or less.</li>
 				<li><span class="price-emphasis">Free</span> project template design by an experienced telecommunications manager for your first project.</li>
 				<li><span class="price-emphasis">Free</span> 1-month trial of Swift Projects.</li>
