--- a/views/main.html
+++ b/views/main.html
@@ -32,7 +32,7 @@
                 <div class="head">We are Close Out Specialists</div>
                 <div class="sub">From the field, to your customer within 24 hours</div>
             </div>
-            <div class="body">Close out packages are usually a drag for everyone involved, but they no longer have to be. Since our founding, we've been entrusted with thousands of site-project close outs, all done cheaper, faster, and better than traditional teams. Our clients trust us because we've proven over time that we can deliver exceptional value. Find out how easy it can be to close out, get paid, and keep more for your profits. You can even try our close out management services for free.</div>
+            <div class="body">With our industry leading close out software, along with our specially trained people, we can get you closed out in near real time, while improving quality, and decreasing cost vs. any internal team that we've faced. You can consider us as a complete outsourcing partner for close out packages, where we take raw files and photos and validate, process, and format this data to meet your customer's time lines and desired formatting. We support your teams throughout your project, providing them support, and a second set of eyes so that they get the right deliverables submitted on time. When we are done, we'll even submit it to your client's portal on your behalf. We have a low-cost, per site price that our customers love, and for a limited time you can try our services for free.</div>
         </div>
         <div class="cta-container">
              <div class="cta" ui-sref="closeout">close out MGMT <i class="icon ion-android-arrow-dropright"></i></div> 
@@ -44,7 +44,7 @@
                 <div class="head">close out Software</div>
                 <div class="sub">The most powerful close out software in the world, for $25 per site-project.</div>
             </div>
-            <div class="body">Swift Projects™ combines aspects of products like SharePoint and Dropbox, with added innovation found no where else, to make a mobile friendly, robust, software platform built specifically for running wireless projects. Take the first steps toward automating your excuses away. <span class="swift-cta">Find out more about how Swift Projects makes closing out and running your projects better.</span></div>
+            <div class="body">Swift Projects™ combines aspects of products like SharePoint and Dropbox, with added innovation found no where else, to make a mobile friendly, robust, software platform built specifically for running wireless projects and closing them out in real time. Take the first steps toward automating your excuses away by trying out our cloud-based close out software that helps you run projects faster and close them out more profitably. <span class="swift-cta">Find out more about how Swift Projects makes closing out and running your projects better.</span></div>
         </div>
         <div class="cta" ui-sref="swift">Swift Projects <i class="icon ion-android-arrow-dropright"></i></div>
     </section>
