--- a/views/swift.html
+++ b/views/swift.html
@@ -13,7 +13,7 @@
     <div class="section intro">
       <div class="heading">Want more sales? Close out faster</div>
 		<div class="content">
-			<p>The close out package - a bane to many good companies, destroyer of evenings away from work, and a cause for much heartache. Truly, a villain in a beautiful story about you getting paid. OK, joking aside, we made something for this real nightmare. It's called Swift Projects, and it puts the power to close telecommunication construction projects out cleanly, and on the day of construction completion, into the palm of your hand. Our system is all about capturing the details while keeping things simple, ingraining quality assurance, and emphasizing mobility and automation. 
+			<p>We made something for the nightmare of closing out in real time. It's called Swift Projects, and it puts the power to close telecommunication construction projects out cleanly, and on the day of construction completion, into the palm of your hand. With Swift Projects, you can take video and photos from the field and put them directly into a photo list, design and manage project workflows with detailed file requirements, and automate administration and tracking. 
 			<p>
 		</div>
 		<div class="content">
@@ -32,11 +32,11 @@
       <div class="content feature-flex">
         <div>
           <div class="title">Photos and Videos from the Field</div>
-          <div class="body">At its most basic level, Swift Projects is the best way to get photos and videos from the field into a highly detailed, scope specific requirement list</div>
+          <div class="body">At its most basic level, Swift Projects is the best way to get photos and videos from the field into a highly detailed, scope specific photo requirement list.</div>
         </div>
         <div>
           <div class="title">Smart Lists</div>
-          <div class="body">Almost everything in the app is a list or a form, just really smart versions that make peoples lives easier and more automated, that anyone can build</div>
+          <div class="body">Almost everything in the app is a list or a form, just really smart versions of them that make peoples lives easier, that anyone can build.</div>
         </div>
       </div>
     </div>
@@ -47,11 +47,11 @@
       <div class="content feature-flex">
         <div>
           <div class="title">You will close out faster</div>
-          <div class="body">QC completed work live and remove the biggest bottleneck to closing out in real time, getting a complete, and organized set of photos as they're taken</div>
+          <div class="body">QA/QC completed work live and remove the biggest bottleneck to closing out in real time, getting a complete, and organized set of photos and documents.</div>
         </div>
         <div>
           <div class="title">Things can be much easier</div>
-          <div class="body">Templates are game changers as-is, but we take them a step further with custom GUI interfaces, and Excel friendliness for creating SOW specific file lists at scale</div>
+          <div class="body">Workflow templates are game changers as-is, but we take them a step further with smart interfaces, and import/export from a .CSV file for mass reports and changes that you can use for creating scope specific task and requirement lists at scale.</div>
         </div>
       </div>
     </div>
@@ -62,11 +62,11 @@
       <div class="content feature-flex">
         <div>
           <div class="title">The power of simplicity</div>
-          <div class="body">Swift Projects is the app designed to get you closed out fast, so if you can make a list, we can turn you into an automation engineer</div>
+          <div class="body">Swift Projects is user friendly, so if you can make a list, or send an email, we can turn you into an automation engineer</div>
         </div>
         <div>
           <div class="title">3 Basic building blocks</div>
-          <div class="body">Our system is simple: we use milestones, tasks, and requirements as the building blocks of any project</div>
+          <div class="body">Our system is simple: we use milestones, tasks, and requirements as the building blocks of any project and give people the ability to reuse projects they've designed and adapt them to the current job.</div>
         </div>
       </div>
     </div>
@@ -117,11 +117,11 @@
       <div class="content feature-flex">
         <div>
           <div class="title">Integrations</div>
-          <div class="body">With 20+ integrations with services like Excel, Box, Dropbox, Google Drive, Gmail, your favorite tools play together</div>
+          <div class="body">With 20+ integrations with services like Excel, Box, Dropbox, Google Drive, Gmail, your favorite tools play together.</div>
         </div>
         <div>
           <div class="title">Power Tools</div>
-          <div class="body">Data tags, forms, import and export with Excel, template cloning, calendar, priority list, activity feeds, and more </div>
+          <div class="body">Data tags, forms, calendars, templates, task lists, activity feeds, push and e-mail notifications, and much more. </div>
         </div>
       </div>
     </div>
@@ -149,11 +149,11 @@
       <div class="content feature-flex">
         <div>
           <div class="title">Metrics</div>
-          <div class="body">With our instant reports and expanding data sets, you can measure, analyze, and improve performance with live information on anything you want to track</div>
+          <div class="body">With our instant reports, you can measure, analyze, and improve performance with live information on anything you want to track, from task statuses to financials.</div>
         </div>
         <div>
           <div class="title">Home Screen</div>
-          <div class="body">Your tasks and others that you care about collected in one spot, displayed with the latest status and schedule in one simple list</div>
+          <div class="body">A new and better version of your inbox where all of your priorities and assignments with their statuses are in one spot.</div>
         </div>
       </div>
     </div>
