--- a/views/swift.html
+++ b/views/swift.html
@@ -13,7 +13,7 @@
     <div class="section intro">
       <div class="heading">Want more sales? Close out faster</div>
 		<div class="content">
-			<p>We made something for the nightmare of closing out in real time. It's called Swift Projects, and it puts the power to close telecommunication construction projects out cleanly, and on the day of construction completion, into the palm of your hand. With Swift Projects, you can take video and photos from the field and put them directly into a photo list, design and manage project workflows with detailed file requirements, and automate administration and tracking. 
+			<p>Swift Projects is specially made to end the nightmare of closing out telecommunication construction projects in real time. With Swift, we can prevent return visits, give your management real time access to photos and videos from the field, design and manage project workflows with detailed file requirements, and automate administration and tracking. If you use a spreadsheet and a shared-drive to manage your files and workflow, then we really need to talk.
 			<p>
 		</div>
 		<div class="content">
