--- a/views/swift.html
+++ b/views/swift.html
@@ -32,7 +32,7 @@
       <div class="content feature-flex">
         <div>
           <div class="title">Photos and Videos from the Field</div>
-          <div class="body">At its most basic level, Swift Projects is the best way to get photos and videos from the field into a highly detailed, scope specific photo requirement list.</div>
+          <div class="body">At its most basic level, Swift Projects is the best way to get photos and videos from the field and into a highly detailed, scope specific requirement list.</div>
         </div>
         <div>
           <div class="title">Smart Lists</div>
@@ -47,11 +47,11 @@
       <div class="content feature-flex">
         <div>
           <div class="title">You will close out faster</div>
-          <div class="body">QA/QC completed work live and remove the biggest bottleneck to closing out in real time, getting a complete, and organized set of photos and documents.</div>
+          <div class="body">Inspect completed work in real time, and remove the biggest bottleneck to closing out live, getting a complete, and organized set of photos, files, and documents.</div>
         </div>
         <div>
           <div class="title">Things can be much easier</div>
-          <div class="body">Workflow templates are game changers as-is, but we take them a step further with smart interfaces, and import/export from a .CSV file for mass reports and changes that you can use for creating scope specific task and requirement lists at scale.</div>
+          <div class="body">Workflow templates are game changers as-is, but we take them a step further with smart interfaces, automation, and import/export from a .CSV file for mass reports and changes that you can use for creating scope specific task and requirement lists at scale.</div>
         </div>
       </div>
     </div>
