--- a/views/swift.html
+++ b/views/swift.html
@@ -47,7 +47,7 @@
       <div class="content feature-flex">
         <div>
           <div class="title">You will close out faster</div>
-          <div class="body">Inspect completed work in real time, and remove the biggest bottleneck to closing out live, getting a complete, and organized set of photos, files, and documents.</div>
+          <div class="body">Inspect completed work in real time, and remove the biggest bottleneck to closing out live, getting a complete, and organized set of photos, files, and documents from the client, your management, and your field teams into one spot.</div>
         </div>
         <div>
           <div class="title">Things can be much easier</div>
@@ -62,7 +62,7 @@
       <div class="content feature-flex">
         <div>
           <div class="title">The power of simplicity</div>
-          <div class="body">Swift Projects is user friendly, so if you can make a list, or send an email, we can turn you into an automation engineer</div>
+          <div class="body">Swift Projects is user friendly, so if you can make a list, or send an email, we can turn you into an automation engineer that can design a workflow that gives your company the structure it needs to go at full speed.</div>
         </div>
         <div>
           <div class="title">3 Basic building blocks</div>
