update to pricing

--- a/views/pricing.html
+++ b/views/pricing.html
@@ -11,13 +11,10 @@
           <div>
             <div class="body">
               <ul>
-                
-                <li><span class="price-emphasis">$25</span> per active site-project per month. Includes 1TB of data and unlimited users. Volume discounts are available.</li>
-				<li><span class="price-emphasis">Free</span> organization setup and orientation for small businesses of 10 users or less.</li>
-				<li><span class="price-emphasis">Free</span> project template design by an experienced telecommunications manager for your first project.</li>
-				<li><span class="price-emphasis">Free</span> 1-month trial of Swift Projects.</li>
-				<li><span class="price-emphasis">Free</span> e-mail, phone, and chat support.</li>
-				<li><span class="price-emphasis">Contact Us</span> for quotes on special setups and pricing.</li>
+					<li><span class="price-emphasis">$100</span> for sites or projects 1-10 per year they are active.</li>
+					<li><span class="price-emphasis">$50</span> for sites or projects 1-100 per year they are active.</li>
+					<li><span class="price-emphasis">$25</span> for sites or projects 101-500 per year they are active.</li>
+               		<li><span class="price-emphasis">Contact Us</span> for 500+ sites/projects quotes.</li>
               </ul>
             </div>
           </div>
@@ -33,7 +30,7 @@
           <div>
             <div class="body">
               <ul>
-                <li><span class="price-emphasis">$225-300</span> per carrier C.O.P. We will take volume, scope, and commitment in mind to provide the best price for your specific need.</li>
+                <li><span class="price-emphasis">$225-275</span> per carrier C.O.P. We will take volume, scope, and commitment in mind to provide the best price for your specific need.</li>
                 <li><span class="price-emphasis">$75</span> per L.L. package, Regulatory form, and other add-ons.</li>
                 <li><span class="price-emphasis">$40</span> per revision round. This fee is applied for each round of revision based on undocumented requirements from the customer, punch-item corrections, or missing files.</li>
 				<li><span class="price-emphasis">Free</span> for your first C.O.P.</li>
